--- a/styles.css
+++ b/styles.css
@@ -38,18 +38,135 @@ article {
     max-inline-size: 15ch;
     margin: auto;
   }
-  h6:hover{
-    transition: blur(80px);
-    color: rgb(143, 18, 18);
+  /**h5 {
+    font-size: 50px;
+    font-family:'Michroma', sans-serif ;
+    color: rgb(236,178,161);
   }
+  h5:hover{
+    transition: blur(80px);
+    transform: rotate(-90deg);
+    color: rgb(143, 18, 18);
+    font-size: 20px;
+  }**/
+  /**h6:hover{
+    color: rgb(143, 18, 18);
+  }**/
   h6 {
-      font-family: 'Michroma', sans-serif;;
-      font-size: 70px;
-      text-align: center;
-      kerning: 20px;
-      color: rgb(236,178,161);
-      margin-left: 80px;
-      margin-right: 80px;
+    font-family: 'Michroma', sans-serif;
+    font-size: 30px;
+    text-align: center;
+    color: rgb(236,178,161);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    margin: 80px auto;
+    width: 675px;
+    height: 675px;
+    background:hsl(346 93.9% 6.5%);
+    border-radius: 75px;
+    letter-spacing: 2px;
+    transition: 1s box-shadow;
+  }
+  
+  h6:hover {
+    box-shadow: 0 5px 35px 0px rgba(0,0,0,.1);
+  }
+  
+  h6:hover::before, div:hover::after {
+    display: block;
+    content: '';
+    position: absolute;
+    width: 675px;
+    height: 675px;
+    background:  hsl(346 96.2% 31.2%);
+    border-radius: 75px;
+    z-index: -1;
+    animation: 1s clockwise infinite;
+  }
+  
+  h6:hover:after {
+    background: #F3CE5E;
+    animation: 2s counterclockwise infinite;
+  }
+  
+  @keyframes clockwise {
+    0% {
+      top: -5px;
+      left: 0;
+    }
+    12% {
+      top: -2px;
+      left: 2px;
+    }
+    25% {
+      top: 0;
+      left: 5px;    
+    }
+    37% {
+      top: 2px;
+      left: 2px;
+    }
+    50% {
+      top: 5px;
+      left: 0;    
+    }
+    62% {
+      top: 2px;
+      left: -2px;
+    }
+    75% {
+      top: 0;
+      left: -5px;
+    }
+    87% {
+      top: -2px;
+      left: -2px;
+    }
+    100% {
+      top: -5px;
+      left: 0;    
+    }
+  }
+  
+  @keyframes counterclockwise {
+    0% {
+      top: -5px;
+      right: 0;
+    }
+    12% {
+      top: -2px;
+      right: 2px;
+    }
+    25% {
+      top: 0;
+      right: 5px;    
+    }
+    37% {
+      top: 2px;
+      right: 2px;
+    }
+    50% {
+      top: 5px;
+      right: 0;    
+    }
+    62% {
+      top: 2px;
+      right: -2px;
+    }
+    75% {
+      top: 0;
+      right: -5px;
+    }
+    87% {
+      top: -2px;
+      right: -2px;
+    }
+    100% {
+      top: -5px;
+      right: 0;    
+    }
   }
   
   p {
